# cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

# project(normal_distributions_transform)

# find_package(PCL 1.5 REQUIRED COMPONENTS 
#     common 
#     io 
#     registration 
#     visualization
# )
# find_package(catkin REQUIRED COMPONENTS roscpp)

# include_directories(include ${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS})
# link_directories(${PCL_LIBRARY_DIRS})
# add_definitions(${PCL_DEFINITIONS})


# add_executable(normal_distributions_transform ndt_node.cpp)
# target_link_libraries (normal_distributions_transform ${PCL_LIBRARIES})
